# AdventOfCode2022

Day1/: day1.hs
Day10/: day10.hs  output
Day11/: day11.hs
Day12/: day12.cabal  day12.hs  input.txt
Day13/: day13.hs
Day14/: day14.hs
Day15/: day15.hs
Day16/: day16.hs
Day17/: day17.hs
Day18/: day18.hs
Day2/: day2.hs
Day21/: day21.hs
Day22/: day22.hs
Day3/: day3.hs
Day4/: day4.hs
Day5/: day5.hs
Day6/: day6.hs
Day7/: day7.hs
Day8/: day8.hs
Day9/: day9.hs
